--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -13,6 +13,7 @@
         font-size: 12px;
         font-weight: 400;
         text-align: center;
+        margin-right: 110px;
         span {
             display: block;
             font-size: 18px;
