--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -1,13 +1,14 @@
 .advantages {
     min-height: 472px;
-    padding: 65px 0 78px 0;
+    padding: 65px 15px 78px 15px;
     background-color: #f6f6f6;
     &__items {
         display: flex;
-        justify-content: space-between;
+        flex-wrap: wrap;
+        justify-content: space-around;
     }
     &__item {
-        width: 245px;
+        width: 250px;
         img {
             display: block;
             margin: 0 auto;
