--- a/src/sass/blocks/_carousel.scss
+++ b/src/sass/blocks/_carousel.scss
@@ -1,9 +1,13 @@
 .carousel {
-    padding: 81px 0;
+    padding: 81px 15px;
     &__inner {
         position: relative;
-        width: 750px;
+        width: 60vw;
         margin: 0 auto;
+        img {
+            width: 55vw;
+            margin: 0 auto;
+        }
     }
 
     .slick-prev {
