--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -1,9 +1,10 @@
 .catalog {
-    padding-bottom: 100px;
+    padding: 0 15px 51px 15px;
     &__tabs {
         margin-top: 70px;
         list-style-type: none;
         display: flex;
+        flex-wrap: wrap;
         justify-content: center;
         align-items: center;
         margin-bottom: 0;
@@ -21,6 +22,7 @@
         line-height: 48px;
         transform: skewX(-25deg);
         margin: 0 5px;
+        margin-bottom: 10px;
         cursor: pointer;
         transition: 0.5s all;
         &:hover {
@@ -39,7 +41,7 @@
     &__content {
         margin-top: 60px;
         display: none;
-        justify-content: space-between;
+        justify-content: space-around;
         flex-wrap: wrap;
         &_active {
             display: flex;
