--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -1,6 +1,6 @@
 .consultation {
     min-height: 680px;
-    padding: 100px 0 92px 0;
+    padding: 100px 15px 92px 15px;
     background: url(../img/bg/bg-consult.jpg) center center/cover no-repeat;
     &__descr {
         color: #ffffff;
