--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -13,7 +13,7 @@
         font-size: 12px;
         font-weight: 400;
         text-align: center;
-        margin-right: 110px;
+        margin: 0 auto;
         span {
             display: block;
             font-size: 18px;
