--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -88,7 +88,7 @@
             font-size: 15px;
         }
         &_submit {
-            width: 250px;
+            width: 240px;
             height: 35px;
             margin: 0 auto;
             margin-top: 10px;
@@ -164,6 +164,26 @@
         input {
             width: 260px;
             height: 35px;
+            font-size: 12px;
+        }
+        &_mt25 {
+            width: 240px;
+            input {
+                width: 240px;
+            }
+        }
+    }
+    .modal {
+        width: 320px;
+        min-height: 360px;
+        &__close {
+            top: 10px;
+            right: 10px;
+        }
+        &__subtitle {
+            font-size: 15px;
+        }
+        &__descr {
             font-size: 12px;
         }
     }
