configured Validate plug-in + reworked some media

--- a/src/sass/blocks/_carousel.scss
+++ b/src/sass/blocks/_carousel.scss
@@ -2,10 +2,9 @@
     padding: 81px 15px;
     &__inner {
         position: relative;
-        width: 60vw;
+        width: 800px;
         margin: 0 auto;
         img {
-            width: 55vw;
             margin: 0 auto;
         }
     }
