--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -23,6 +23,14 @@
             text-align: center;
         }
     }
+    .carousel {
+        &__inner {
+            width: 600px;
+            img {
+                width: 600px;
+            }
+        }
+    }
     .title {
         &_left {
             font-size: 34px;
@@ -64,6 +72,14 @@
             font-size: 25px;
         }
     }
+    .carousel {
+        &__inner {
+            width: 400px;
+            img {
+                width: 400px;
+            }
+        }
+    }
 }
 
 @media (max-width: 575px) {
@@ -80,7 +96,8 @@
     .button {
         width: 105px;
         height: 17px;
-        font-size: 10px;
+        font-size: 9px;
+        line-height: 8px;
         &_main {
             width: 250px;
             height: 35px;
@@ -207,8 +224,15 @@
     }
     .carousel {
         padding: 50px 15px;
+        &__inner {
+            width: 280px;
+            img {
+                width: 280px;
+            }
+        }
     }
     .catalog {
+        padding-bottom: 25px;
         &-item {
             min-height: 380px;
             &__img {
@@ -218,12 +242,14 @@
                     font-size: 13px;
             }
             &__descr {
+                width: 245px;
                 font-size: 11px;
             }
             &__link {
                 font-size: 11px;
             }
             &__list {
+                margin-left: 5px;
                 li {
                     font-size: 11px;
                 }
@@ -241,8 +267,15 @@
             font-size: 15px;
             line-height: 35px;
         }
+        &__tabs {
+            margin-top: 35px;
+        }
+        &__content {
+            margin-top: 25px;
+        }
     }
     .reviews {
+        padding-top: 25px;
         img {
             width: 100px;
             height: 100px;
